--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -25,8 +25,10 @@
         android:layout_height="match_parent"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layoutManager="android.support.v7.widget.GridLayoutManager"
+        android:orientation="vertical"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:listitem="@layout/recipe_list" />
+        app:reverseLayout="false"
+        tools:listitem="@layout/search_list" />
 
 </android.support.design.widget.CoordinatorLayout>
