--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,9 +10,10 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_favorites"
+        android:icon="@drawable/ic_menu_favorite"
         android:orderInCategory="200"
-        android:title="settings"
-        app:showAsAction="never" />
+        android:title="Favorites"
+        app:showAsAction="ifRoom" />
 
 </menu>
