--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/details_coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetailsActivity">
@@ -122,8 +123,10 @@
         android:layout_marginEnd="16dp"
         android:clickable="true"
         android:focusable="true"
+        app:elevation="6dp"
+        app:pressedTranslationZ="14dp"
         app:fabSize="normal"
         app:layout_anchor="@+id/appBarLayout"
         app:layout_anchorGravity="right|bottom"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/ic_fav_off" />
 </android.support.design.widget.CoordinatorLayout>
