--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -8,7 +8,7 @@
     tools:context=".DetailsActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBarLayout"
+        android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -41,9 +41,12 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/details_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:visibility="invisible"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:visibility="visible">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -116,17 +119,40 @@
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <ProgressBar
+            android:id="@+id/loading_indicator_pb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="invisible" />
+
+        <FrameLayout
+            android:id="@+id/offline_frame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="invisible">
+
+            <include layout="@layout/offline_layout" />
+        </FrameLayout>
+    </FrameLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/favorites_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:clickable="true"
-        android:focusable="true"
+        android:visibility="invisible"
         app:elevation="6dp"
-        app:pressedTranslationZ="14dp"
         app:fabSize="normal"
-        app:layout_anchor="@+id/appBarLayout"
+        app:layout_anchor="@+id/appbar_layout"
         app:layout_anchorGravity="right|bottom"
-        app:srcCompat="@drawable/ic_fav_off" />
+        app:pressedTranslationZ="14dp"
+        app:srcCompat="@drawable/ic_fav_off"
+        tools:visibility="visible" />
 </android.support.design.widget.CoordinatorLayout>
