--- a/app/src/main/res/layout/favorites_widget_provider.xml
+++ b/app/src/main/res/layout/favorites_widget_provider.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Favorites list is empty"
+            android:text="It seems you do not have any favorites."
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="20sp"
