--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -54,11 +54,11 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recipe_title_tv" />
+            app:layout_constraintTop_toBottomOf="@+id/recipe_title_tv"
+            tools:text="$$$$$$$" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
