--- a/app/src/main/res/layout/favorites_widget_provider.xml
+++ b/app/src/main/res/layout/favorites_widget_provider.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
+    android:background="@color/colorWidgetBackground"
     android:padding="@dimen/widget_margin">
 
     <RelativeLayout
@@ -12,17 +12,13 @@
 
         <TextView
             android:id="@+id/appwidget_title_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            style="@style/widgetTitleStyle"
+            android:layout_margin="@dimen/default_vertical_margin"
             android:contentDescription="@string/appwidget_text"
-            android:text="@string/favorites_title"
-            android:textColor="#ffffff"
-            android:textSize="24sp"
-            android:textStyle="bold|italic" />
+            android:text="@string/favorites_title" />
 
         <ListView
-            android:id="@+id/appwidget_favorits_lv"
+            android:id="@+id/appwidget_favorites_lv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/appwidget_title_tv"
@@ -37,14 +33,8 @@
 
         <TextView
             android:id="@+id/no_favorite_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="It seems you do not have any favorites."
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            style="@style/widgetMessageStyle"
+            android:text="@string/no_favorites_message" />
 
         <Button
             android:id="@+id/no_favorite_btn"
@@ -52,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/no_favorite_tv"
             android:layout_centerHorizontal="true"
-            android:text="launch" />
+            android:text="@string/widget_button_launch" />
 
     </RelativeLayout>
 </FrameLayout>
