--- a/app/src/main/res/layout/offline_layout.xml
+++ b/app/src/main/res/layout/offline_layout.xml
@@ -6,13 +6,11 @@
 
     <TextView
         android:id="@+id/error_message_tv"
+        style="@style/offlineMessageStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Connect to the Internet"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textSize="18sp"
+        android:layout_marginTop="@dimen/default_vertical_margin"
+        android:text="@string/offlineMessage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,8 +19,8 @@
         android:id="@+id/error_sub_message_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="You're offline, check you connection."
+        android:layout_marginTop="@dimen/default_vertical_margin"
+        android:text="@string/offlineSubMessage"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,11 +31,9 @@
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Retry"
+        android:layout_marginBottom="@dimen/default_vertical_margin"
+        android:layout_marginTop="@dimen/default_vertical_margin"
+        android:text="@string/retryButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
