--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -16,8 +16,9 @@
         <ImageView
             android:id="@+id/recipe_poster_iv"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="@dimen/mainPosterHeight"
             android:adjustViewBounds="true"
+            android:contentDescription="@string/recipe_poster"
             android:scaleType="centerCrop"
             tools:src="@drawable/ic_launcher_background" />
 
@@ -26,8 +27,8 @@
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
+            android:layout_marginTop="@dimen/default_vertical_margin"
             android:numStars="5"
             android:stepSize="0.1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,9 +38,9 @@
             android:id="@+id/recipe_title_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
+            android:layout_marginStart="@dimen/secondary_horizontal_margin"
+            android:layout_marginTop="@dimen/default_vertical_margin"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,10 +51,10 @@
             android:id="@+id/publisher_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="@dimen/default_vertical_margin"
+            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
+            android:layout_marginStart="@dimen/secondary_horizontal_margin"
+            android:layout_marginTop="@dimen/default_vertical_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
