--- a/app/src/main/res/layout-land/recipe_list.xml
+++ b/app/src/main/res/layout-land/recipe_list.xml
@@ -15,19 +15,17 @@
 
         <ImageView
             android:id="@+id/recipe_poster_iv"
-            android:layout_width="200dp"
-            android:layout_height="112dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
+            style="@style/recipePosterLandStyle"
+            android:contentDescription="@string/recipe_poster"
             tools:src="@drawable/ic_launcher_background" />
 
         <TextView
             android:id="@+id/recipe_title_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
+            android:layout_marginStart="@dimen/secondary_horizontal_margin"
+            android:layout_marginTop="@dimen/default_vertical_margin"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/recipe_poster_iv"
@@ -39,8 +37,8 @@
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="@dimen/secondary_horizontal_margin"
+            android:layout_marginTop="@dimen/default_vertical_margin"
             android:numStars="5"
             android:stepSize="0.1"
             app:layout_constraintStart_toEndOf="@+id/recipe_poster_iv"
@@ -50,16 +48,16 @@
             android:id="@+id/publisher_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
+            android:layout_marginBottom="@dimen/default_vertical_margin"
+            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
+            android:layout_marginStart="@dimen/secondary_horizontal_margin"
+            android:layout_marginTop="@dimen/default_vertical_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/recipe_poster_iv"
             app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="$$$$$$$$$$" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
