--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -10,7 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="@dimen/appbar_height"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -26,6 +26,7 @@
                 android:id="@+id/recipe_poster_iv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/recipe_poster"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
@@ -33,7 +34,7 @@
                 android:id="@+id/details_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="#0FFF"
+                android:background="@color/colorTransparent"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -57,8 +58,8 @@
                 style="@style/Widget.AppCompat.RatingBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginStart="@dimen/default_horizontal_margin"
+                android:layout_marginTop="@dimen/small_margin"
                 android:numStars="5"
                 android:stepSize="0.1"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,15 +67,10 @@
 
             <TextView
                 android:id="@+id/ingredients_label_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="sans-serif-condensed"
-                android:text="Ingredients"
-                android:textColor="@color/colorAccent"
-                android:textSize="24sp"
-                android:textStyle="bold|italic"
+                style="@style/titleStyle"
+                android:layout_marginStart="@dimen/default_horizontal_margin"
+                android:layout_marginTop="@dimen/default_vertical_margin"
+                android:text="@string/ingredients_title"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
 
@@ -82,35 +78,27 @@
                 android:id="@+id/ingredients_lv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/default_vertical_margin"
                 app:layout_constraintTop_toBottomOf="@+id/ingredients_label_tv"
                 tools:listitem="@layout/ingredients_list" />
 
             <TextView
                 android:id="@+id/source_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/link_background"
-                android:padding="4dp"
-                android:text="Instructions"
-                android:textColor="@color/cardview_light_background"
+                style="@style/linkStyle"
+                android:layout_marginBottom="@dimen/default_vertical_margin"
+                android:layout_marginStart="@dimen/default_horizontal_margin"
+                android:layout_marginTop="@dimen/default_vertical_margin"
+                android:text="@string/link_instructions_button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ingredients_lv" />
 
             <TextView
                 android:id="@+id/publisher_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/link_background"
-                android:padding="4dp"
-                android:textColor="@color/cardview_light_background"
+                style="@style/linkStyle"
+                android:layout_marginBottom="@dimen/default_vertical_margin"
+                android:layout_marginEnd="@dimen/default_horizontal_margin"
+                android:layout_marginTop="@dimen/default_vertical_margin"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ingredients_lv"
@@ -146,13 +134,14 @@
         android:id="@+id/favorites_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/default_horizontal_margin"
+        android:contentDescription="@string/fabButtonDescription"
         android:visibility="invisible"
-        app:elevation="6dp"
+        app:elevation="@dimen/fab_elevation"
         app:fabSize="normal"
         app:layout_anchor="@+id/appbar_layout"
         app:layout_anchorGravity="right|bottom"
-        app:pressedTranslationZ="14dp"
+        app:pressedTranslationZ="@dimen/fab_pressed_translation"
         app:srcCompat="@drawable/ic_fav_off"
         tools:visibility="visible" />
 </android.support.design.widget.CoordinatorLayout>
