--- a/app/src/main/res/layout/widget_list_item.xml
+++ b/app/src/main/res/layout/widget_list_item.xml
@@ -11,8 +11,8 @@
         android:id="@+id/recipe_name_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:textColor="#000"
+        android:layout_marginStart="@dimen/small_margin"
+        android:textColor="@color/colorBlack"
         android:textSize="15sp"
         tools:text="Title" />
 
