--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,19 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="appbar_height">300dp</dimen>
+    <dimen name="default_horizontal_margin">16dp</dimen>
+    <dimen name="default_vertical_margin">8dp</dimen>
+    <dimen name="small_margin">4dp</dimen>
+    <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="fab_pressed_translation">14dp</dimen>
+    <dimen name="secondary_horizontal_margin">8dp</dimen>
+    <dimen name="big_margin">32dp</dimen>
+    <dimen name="midi_margin">16dp</dimen>
+    <dimen name="mainPosterHeight">200dp</dimen>
+    <dimen name="landPosterWidth">200dp</dimen>
+    <dimen name="landPosterHeight">112dp</dimen>
+    <dimen name="cardCorner">4dp</dimen>
+    <dimen name="cardElevation">4dp</dimen>
 
 </resources>
