--- a/app/src/main/res/layout/favorites_widget_provider.xml
+++ b/app/src/main/res/layout/favorites_widget_provider.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWidgetBackground"
+    android:background="@color/colorPrimary"
     android:padding="@dimen/widget_margin">
 
     <RelativeLayout
@@ -22,13 +22,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/appwidget_title_tv"
+            android:background="@color/colorWhite"
             tools:listitem="@layout/widget_list_item" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/empty_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
         <TextView
